# opencv_learning

./: .gitignore
Assignment2_FaceAnnotationTool/: CMakeLists.txt  submission.cpp
Assignment3_ResizeImageUsingTrackbar/: CMakeLists.txt  submission.cpp
ErosionAndDilationSample/: CMakeLists.txt  main.cpp
ImageSmoothingTechniques/: CMakeLists.txt  main.cpp
QRCodeDetector/: CMakeLists.txt  main.cpp
annotateImage/: CMakeLists.txt  main.cpp
assignment_autofocus/: CMakeLists.txt  main.cpp
assignment_cvtColor/: CMakeLists.txt  main.cpp
assignment_imageAlignment/: CMakeLists.txt  main.cpp
assignment_panorama/: CMakeLists.txt  main.cpp
blemishRemoval/: CMakeLists.txt  submission.cpp
blobDetection/: CMakeLists.txt  main.cpp
chromaKeying/: CMakeLists.txt  submission.cpp
coinDetectionAssignment/: CMakeLists.txt  main.cpp
convolutionSimple/: CMakeLists.txt  main.cpp
createImageMask/: CMakeLists.txt  main.cpp
createNewImage/: CMakeLists.txt  main.cpp
cudaSample/: CMakeLists.txt  main.cpp
cudaVideoWriter/: CMakeLists.txt  main.cpp
displayImageAlphaChannel/: CMakeLists.txt  main.cpp
displayImageMatrix/: CMakeLists.txt  main.cpp
displayingImage/: CMakeLists.txt  main.cpp
documentAlignmentWithHomography/: CMakeLists.txt  main.cpp
houghTransform/: CMakeLists.txt  main.cpp
imageContrastBrightness/: CMakeLists.txt  main.cpp
implementContours/: CMakeLists.txt  main.cpp
implementMorphologicalOps/: CMakeLists.txt  main.cpp
modifyColorPixels/: CMakeLists.txt  main.cpp
mouseEventsSample/: CMakeLists.txt  main.cpp
playVideoBasics/: CMakeLists.txt  main.cpp
project_detectandtrack/: CMakeLists.txt  main.cpp  submission.cpp
project_documentScanner/: CMakeLists.txt  submission.cpp
project_instagramfilter/: CMakeLists.txt  main.cpp
sunglassFilterApp/: CMakeLists.txt  main.cpp
thresholdAlgorithmSample/: CMakeLists.txt  main.cpp
webCamWithKeyboardInput/: CMakeLists.txt  main.cpp
